--- a/frontend/static/login.html
+++ b/frontend/static/login.html
@@ -1,40 +1,82 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login</title>
   <style>
-    body{font-family: Arial; background:#f6f8fb; padding:24px}
-    .card{max-width:420px;margin:40px auto;background:#fff;padding:20px;border-radius:10px;box-shadow:0 4px 14px rgba(0,0,0,0.06)}
-    input,button{width:100%;padding:10px;margin:8px 0;border-radius:6px;border:1px solid #ccc}
-    button{background:#0b74ff;color:#fff;border:none}
+    body { font-family: Arial; background:#f6f8fb; padding:24px; }
+    .card {
+      max-width:420px;
+      margin:40px auto;
+      background:#fff;
+      padding:20px;
+      border-radius:10px;
+      box-shadow:0 4px 14px rgba(0,0,0,0.06);
+    }
+    input,button {
+      width:100%; padding:10px; margin:8px 0;
+      border-radius:6px; border:1px solid #ccc;
+    }
+    button {
+      background:#0b74ff; color:#fff; border:none; font-weight:600;
+    }
+    .spinner {
+      display:none;
+      text-align:center;
+      margin-top:10px;
+      color:#555;
+      font-size:14px;
+    }
+    .small { font-size:13px; color:#666; }
   </style>
 </head>
 <body>
   <div class="card">
     <h2>Login</h2>
-    <input id="uid" placeholder="Your ID">
-    <input id="password" type="password" placeholder="Password">
+    <input id="uid" placeholder="Enter your User ID" />
+    <input id="password" type="password" placeholder="Enter your password" />
     <button id="loginBtn">Login</button>
-    <p style="font-size:13px;color:#666">Don't have an ID? <a href="signup.html">Sign up</a></p>
+    <div class="spinner" id="spinner">Logging in...</div>
+    <p class="small">
+      Don’t have an account? <a href="signup.html">Create one</a>
+    </p>
   </div>
 
   <script src="shared.js"></script>
   <script>
-    document.getElementById('uid').value = localStorage.getItem('userId')||'';
-    document.getElementById('loginBtn').onclick = async () => {
-      const phone = document.getElementById('uid').value;
-      const password = document.getElementById('password').value;
-      if (!phone || !password) return alert('Enter ID and password');
-      const res = await api('login','POST',{phone, password});
+    // Pre-fill saved userId if available
+    document.getElementById('uid').value = localStorage.getItem('userId') || '';
+
+    const spinner = document.getElementById('spinner');
+    const loginBtn = document.getElementById('loginBtn');
+
+    loginBtn.onclick = async () => {
+      const phone = document.getElementById('uid').value.trim();
+      const password = document.getElementById('password').value.trim();
+
+      if (!phone || !password) {
+        alert('Please enter both your User ID and password.');
+        return;
+      }
+
+      spinner.style.display = 'block';
+      loginBtn.disabled = true;
+
+      const res = await api('login', 'POST', { phone, password });
+
+      spinner.style.display = 'none';
+      loginBtn.disabled = false;
+
       if (res.token) {
         token = res.token;
+        myId = res.id;
+        localStorage.setItem('userId', myId);
         localStorage.setItem('token', token);
-        localStorage.setItem('userId', res.id);
-        alert('Logged in');
+        alert('✅ Login successful! Welcome back.');
         window.location = 'public.html';
       } else {
-        alert('Login failed: ' + JSON.stringify(res));
+        alert('❌ Login failed. Please check your User ID or password.');
       }
     };
   </script>
