--- a/frontend/static/private.html
+++ b/frontend/static/private.html
@@ -1,58 +1,96 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Private Broadcast</title>
-  <style>
-    body{font-family: Arial;padding:16px;background:#f6f8fb}
-    .card{max-width:900px;margin:16px auto;background:#fff;padding:16px;border-radius:10px}
-    .chat{height:300px;overflow:auto;border:1px solid #eee;padding:8px;border-radius:8px;background:#fafafa}
-    input,button{padding:10px;margin-top:8px;width:100%;box-sizing:border-box}
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Private Broadcast</title>
+<style>
+  body { font-family: Arial; padding: 20px; background:#f7f9fb; }
+  h2 { text-align:center; }
+  #chat { border:1px solid #ccc; height:220px; overflow-y:auto; padding:8px; border-radius:6px; background:#fff; }
+  input, button { padding:8px; border-radius:6px; margin-top:5px; }
+  video { width:45%; margin:4px; border-radius:8px; background:black; }
+  #videos { text-align:center; margin-top:10px; }
+</style>
 </head>
 <body>
-  <div class="card">
-    <h2>Private Broadcast</h2>
-    <input id="keyInput" placeholder="Enter private entry key or use saved">
-    <button id="joinBtn">Join Private Room</button>
-    <div id="chat" class="chat"></div>
-    <input id="msg" placeholder="Private message">
-    <button id="send">Send Private</button>
-  </div>
+<h2>🔒 Private Broadcast</h2>
+<input id="keyInput" placeholder="Enter Entry Key" />
+<button id="joinBtn">Join Room</button>
+<div id="chat"></div>
+<input id="msg" placeholder="Private message..." /> <button id="send">Send</button>
 
-  <script src="https://cdn.socket.io/4.7.1/socket.io.min.js"></script>
-  <script src="shared.js"></script>
-  <script>
-    token = localStorage.getItem('token');
-    if (!token) location.href = 'login.html';
-    const socket = io(API_BASE, { path: '/socket.io' });
-    const chat = document.getElementById('chat');
-    let currentKey = localStorage.getItem('entryKey') || '';
+<div id="videos">
+  <video id="localVideo" autoplay muted playsinline></video>
+  <video id="remoteVideo" autoplay playsinline></video>
+</div>
 
-    document.getElementById('keyInput').value = currentKey;
+<script src="https://cdn.socket.io/4.7.1/socket.io.min.js"></script>
+<script src="shared.js"></script>
+<script>
+token = localStorage.getItem('token');
+if (!token) location.href = 'login.html';
 
-    socket.on('connect', () => socket.emit('auth', token));
-    socket.on('private-message', (m) => {
-      const p = document.createElement('div');
-      p.textContent = m.from + ': ' + m.text;
-      chat.appendChild(p);
-      chat.scrollTop = chat.scrollHeight;
-    });
+const socket = io(API_BASE, { path: '/socket.io' });
+let key = null;
+const chat = document.getElementById('chat');
+const msg = document.getElementById('msg');
+let pc;
 
-    document.getElementById('joinBtn').onclick = () => {
-      const k = document.getElementById('keyInput').value.trim();
-      if (!k) return alert('Enter key');
-      currentKey = k;
-      socket.emit('join-private', k);
-      alert('Joined private room: ' + k);
-    };
+socket.on('connect', () => socket.emit('auth', token));
+socket.on('auth-ok', () => console.log('Connected private channel'));
 
-    document.getElementById('send').onclick = () => {
-      if (!currentKey) return alert('Join a private room first');
-      const t = document.getElementById('msg').value;
-      socket.emit('private-message', { key: currentKey, text: t });
-      document.getElementById('msg').value = '';
-    };
-  </script>
+socket.on('private-message', m => {
+  const p = document.createElement('p');
+  p.textContent = `${m.from}: ${m.text}`;
+  chat.appendChild(p);
+  chat.scrollTop = chat.scrollHeight;
+});
+
+socket.on('private-signal', async data => {
+  if (!pc) return;
+  if (data.sdp) {
+    await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
+    if (data.sdp.type === 'offer') {
+      const answer = await pc.createAnswer();
+      await pc.setLocalDescription(answer);
+      socket.emit('private-signal', { to: key, payload: { sdp: pc.localDescription } });
+    }
+  } else if (data.candidate) {
+    try { await pc.addIceCandidate(data.candidate); } catch(e){ console.error(e); }
+  }
+});
+
+document.getElementById('joinBtn').onclick = async () => {
+  key = document.getElementById('keyInput').value.trim();
+  if (!key) return alert('Enter a valid key');
+  alert('✅ Joined private broadcast for key: ' + key);
+  startPrivateVideo();
+};
+
+document.getElementById('send').onclick = () => {
+  if (!key) return alert('Join a key first!');
+  socket.emit('private-message', { to: key, text: msg.value });
+  msg.value = '';
+};
+
+async function startPrivateVideo() {
+  const localVideo = document.getElementById('localVideo');
+  const remoteVideo = document.getElementById('remoteVideo');
+  const stream = await navigator.mediaDevices.getUserMedia({ video:true, audio:true });
+  localVideo.srcObject = stream;
+
+  pc = new RTCPeerConnection();
+  stream.getTracks().forEach(track => pc.addTrack(track, stream));
+  pc.ontrack = event => { remoteVideo.srcObject = event.streams[0]; };
+  pc.onicecandidate = event => {
+    if (event.candidate) socket.emit('private-signal', { to: key, payload: { candidate: event.candidate } });
+  };
+
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+  socket.emit('private-signal', { to: key, payload: { sdp: offer } });
+}
+</script>
 </body>
 </html>
